--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfcVO2pvO1_g4DmUKWr6YGAQMo0YrOThwYF1slnQi29_I4MgQ/viewform?vc=0&c=0&w=1&flr=0">
         <button style="width:90%;display:block;margin-left:auto;margin-right:auto;" class="w3-button w3-black w3-padding-large w3-margin-bottom">Register »</button>
       </a>
-      <h3 style="color: #e67e1d97;"><b>=> Staff Cordinator:</b></h3>
+      <h3 style="color: ##f00505;"><b> Staff Cordinator:</b></h3>
         <a>Dr.K.Senthil Kumar</a>
-        <a> , Msr.S.Preethi</a>
-    <h3 style="color: #e67e1d97;"><b>=> Student Cordinator:</b></h3>
-        <a>Mr.R.Cibi Krishina - 6381271796</a>
+        <a> , Mrs.S.Preethi</a>
+    <h3 style="color: ##f00505;"><b> Student Cordinator:</b></h3>
+        <a>Mr.R.Cibi Krishna - 6381271796</a>
         <a> , Mr.P.Naveen Bharathi - 9488042479</a>
     </footer>
 
