Add the Statement

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <div class="w3-container">
           <b>
-            <p>ID: EEI001. Working model of Drone using remote model.</p>
+            <p>ID: EEI001. Working model of Drone using remote model</p>
           </b>
           <p>Create a functional drone model that can be controlled remotely using a wireless transmitter and
             receiver. The drone should be capable of stable flight, maneuvering, and performing basic aerial
@@ -174,7 +174,7 @@
             module integrated with moisture sensors and a mobile application to provide farmers with
             timely irrigation alerts and recommendations based on real-time data.</p>
           <b>
-            <p>ID: EEI006. Development a device for tracking the movement of the sun for movement of the solar
+            <p>ID: EEI006. Develop a device for tracking the movement of the sun for the movement of the solar
               panels, increasing their efficiency</p>
           </b>
           <p>The problem statement is to develop a cost-effective, non-electrical device that can
@@ -213,7 +213,7 @@
               Halls</p>
           </b>
           <p>This project aims to design an affordable signal jammer specifically for use in
-            examination halls or during departmental events to prevent unauthorized mobile phone
+            examination halls or during departmental events to prevent the unauthorized mobile phone
             usage. The system will target specific frequency bands to ensure minimal disruption
             outside the intended area. Additionally, an integrated detection system will identify the
             location of active mobile phones, allowing for real-time monitoring and enforcement of
@@ -252,9 +252,9 @@
             <p>ID: EIP002. Image-Based Document Analysis System</p>
           </b>
           <p>The objective is to develop a sophisticated system capable of analyzing documents such
-            as answersheets, extracting and processing information accurately.It will feature
+            as answer sheets, extracting and processing information accurately. It will feature
             advanced document analysis capabilities to interpret layouts, extract marks, and
-            automatically populate Excel sheets. Additionally, the system will create structured
+            automatically populate Excel sheets. Additionally, the system will create a structured
             tables and ensure high accuracy across diverse document formats and fonts, focusing
             on reliable and precise text extraction and data organization.</p>
           <b>
@@ -262,7 +262,7 @@
           </b>
           <p>The project aims to create an Early Warning System (EWS) for Glacial Lakes (GLOFs)
             using remote sensing data, IoT sensors, and advanced analytics. The system will monitor
-            lake changes, identify potential outbursts, and use machine learning algorithms to
+            lake changes, identify potential outbursts and use machine learning algorithms to
             improve safety, reduce economic losses, and contribute to resilient infrastructure
             planning in glacial regions.</p>
           <div class="w3-row" style="width:50%;display:block;margin-left:auto;margin-right:auto;">
@@ -301,7 +301,11 @@
             point allocation, validation, and record-keeping, ensuring accurate and efficient tracking
             of students' academic performance and progress.</p>
           <b>
-            <p>ID: ESW003. Develop a ML Model based solution to refine CAPTCHA</p>
+             <p>ID: ESW003. Develop a website for the ECE Department</p>
+          </b>
+          <p>Design a Responsive Website with the Technology Stack(Frontend: HTML5, CSS3, JavaScript (with React or Angular for more interactive UIs), Backend: Node.js (Express), Python (Django/Flask), or PHP (Laravel), Database: MySQL, PostgreSQL, or MongoDB, Authentication: JWT, OAuth for secure login, Hosting: AWS, DigitalOcean, or Heroku). Which includes Students & Staffs database, Achievements, Recent Updates.  </p>
+          <b>
+            <p>ID: ESW004. Develop a ML Model-based solution to refine CAPTCHA</p>
           </b>
           <p>The challenge involves teams developing a passive solution using AI/ML to analyze
             environmental parameters to differentiate between bots and humans. The solution should
@@ -368,10 +372,10 @@
       </a>
       <h3 style="color: ##f00505;"><b> Staff Cordinator:</b></h3>
         <a>Dr.K.Senthil Kumar</a>
-        <a> , Mrs.S.Preethi</a>
+        <a>  Mrs.S.Preethi</a>
     <h3 style="color: ##f00505;"><b> Student Cordinator:</b></h3>
         <a>Mr.R.Cibi Krishna - 6381271796</a>
-        <a> , Mr.P.Naveen Bharathi - 9488042479</a>
+        <a>  Mr.P.Naveen Bharathi - 9488042479</a>
     </footer>
 
   </div>
